<?xml version="1.0"?>
<package format="2">

  <name>mrs_errorgraph_viewer</name>
  <version>1.0.0</version>
  <description>
    A utility for visualization of the MRS Errorgraph.
  </description>

  <maintainer email="vrbamato@fel.cvut.cz">Matouš Vrba</maintainer>
  <author email="vrbamato@fel.cvut.cz">Matouš Vrba</author>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>cmake_modules</depend>
  <depend>roscpp</depend>
  <depend>nodelet</depend>
  <depend>mrs_msgs</depend>
  <depend>mrs_lib</depend>
  <depend>mrs_errorgraph</depend>
  <depend>message_generation</depend>

  <export>
    <nodelet plugin="${prefix}/nodelets.xml" />
  </export>

</package>
